# Chord

./: .eslintcache  .gitignore  .gitmodules  chord  components.json  development.md  eslint.config.js  gemini.md  index.html  package.json  pnpm-lock.yaml  readme.md  scripting.md  tailwind.config.js  test.js  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: chords.json  settings.json
src-tauri/crates/frontmost/: Cargo.toml
src-tauri/crates/llrt_core/: Cargo.toml  build.rs
src-tauri/crates/llrt_core/bundle/js/: stream.js
src-tauri/crates/llrt_core/bundle/js/stream/: promises.js
src-tauri/crates/llrt_core/src/modules/js/: llrt.d.ts  stream.ts
src-tauri/crates/llrt_core/src/modules/js/@llrt/expect/: jest-asymmetric-matchers.ts  jest-expect.ts  (+2 more)
src-tauri/crates/llrt_core/src/modules/js/stream/: promises.ts
src-tauri/crates/llrt_net/: Cargo.toml
src-tauri/crates/llrt_readline/: Cargo.toml
src-tauri/crates/llrt_readline/src/: lib.rs
src-tauri/crates/rdev/: Cargo.toml
src-tauri/crates/rdev/src/: lib.rs
src-tauri/crates/rdev/src/macos/: grab.rs  simulate.rs
src-tauri/crates/taurpc_macros/: Cargo.toml
src-tauri/crates/taurpc_macros/src/: lib.rs
src-tauri/native/: caps.c
src-tauri/patches/: llrt_core+0.8.1-beta.patch
src-tauri/src/: api.rs  chordpack.rs  constants.rs  git.rs  lib.rs  main.rs  mode.rs  setup.rs  sources.rs
src-tauri/src/api/: api.rs  error.rs  mod.rs
src-tauri/src/api/resolvers/: add_git_repo.rs  add_local_chord_folder.rs  complete_onboarding.rs  get_current_states.rs  get_startup_status.rs  list_global_shortcut_mappings.rs  list_local_chord_folders.rs  mod.rs  open_accessibility_settings.rs  open_input_monitoring_settings.rs  pick_local_chord_folder.rs  quit_app.rs  relaunch_app.rs  remove_git_repo.rs  remove_global_shortcut_mapping.rs  remove_placeholder_chord_binding.rs  reset_default_chords.rs  set_placeholder_chord_binding.rs  sync_git_repo.rs  toggle_autostart.rs  toggle_dock_icon.rs  toggle_hide_guide_by_default.rs  toggle_menu_bar_icon.rs  update_global_shortcut_mapping.rs
src-tauri/src/app/: chorder.rs  chorder_ui.rs  mod.rs  permissions.rs  placeholder_chords.rs  repos.rs  safe_app_handle.rs  settings.rs  state.rs
src-tauri/src/app/chord_input_manager/: app.rs  chord_input_manager.rs  mod.rs
src-tauri/src/app/chord_input_ui/: chord_input_ui.rs  mod.rs
src-tauri/src/app/chord_js_package_registry/: mod.rs
src-tauri/src/app/chord_mode_manager/: app.rs  chord_input_manager.rs  chord_mode_manager.rs  chord_mode_panel.rs  chord_mode_ui.rs  mod.rs
src-tauri/src/app/chord_package/: chord.rs  chord_file.rs  chord_package.rs  mod.rs
src-tauri/src/app/chord_package_manager/: app.rs  chord_js_package.rs  chord_package.rs  chord_package_manager.rs  chords_file_parser.rs  config.rs  git.rs  loader.rs  local.rs  mod.rs  package_loader.rs  parser.rs  registry.rs
src-tauri/src/app/chord_package_manager/chord_package_registry/: config.rs  local.rs  mod.rs  registry.rs
src-tauri/src/app/chord_package_manager/chord_package_registry/git/: git.rs  git_repos_store.rs  mod.rs
src-tauri/src/app/chord_package_registry/: app.rs  config.rs  git.rs  local.rs  mod.rs  registry.rs  store.rs
src-tauri/src/app/chord_package_store/: app.rs  mod.rs  store.rs
src-tauri/src/app/chord_registry/: chord_file.rs  chord_package.rs  mod.rs
src-tauri/src/app/chord_runner/: app.rs  handler.rs  javascript.rs  mod.rs  registry.rs  runner.rs  runtime.rs  shell.rs  shortcut.rs
src-tauri/src/app/chorder/: mod.rs  ui.rs
src-tauri/src/app/context/: mod.rs
src-tauri/src/app/controller/: app.rs  app_mode.rs  mod.rs
src-tauri/src/app/desktop_app/: app.rs  desktop_app.rs  desktop_app_manager.rs  manager.rs  mod.rs
src-tauri/src/app/dev_lockfile_detector/: app.rs  dev_lockfile_detector.rs  mod.rs
src-tauri/src/app/frontmost/: app.rs  frontmost.rs  mod.rs
src-tauri/src/app/git_repos_store/: app.rs  git_repos_store.rs  mod.rs
src-tauri/src/app/global_hotkey_store/: app.rs  global_hotkey_store.rs  mod.rs
src-tauri/src/app/keyboard/: app.rs  keyboard.rs  mod.rs
src-tauri/src/app/mode/: app.rs  app_mode.rs  mod.rs
src-tauri/src/app/permissions/: app.rs  mod.rs  permissions.rs
src-tauri/src/app/placeholder_chord_store/: app.rs  mod.rs  placeholder_chord_store.rs
src-tauri/src/app/settings/: app.rs  mod.rs  settings.rs  settings_ui.rs  ui.rs
src-tauri/src/chord_runner/: javascript.rs  mod.rs
src-tauri/src/chords/: chord.rs  chord_file.rs  chord_folder.rs  shortcut.rs
src-tauri/src/desktop_app/: manager.rs  mod.rs
src-tauri/src/feature/: app_handle_ext.rs  chorder.rs  chorder_panel.rs  chorder_ui.rs  frontmost.rs  global_hotkey.rs  mod.rs  permissions.rs  placeholder_chords.rs  repos.rs  safe_app_handle.rs  settings.rs
src-tauri/src/input/: caps.rs  handler.rs  key.rs  key_event.rs
src-tauri/src/models/: chord.rs  chord_action.rs  chord_hint.rs  chord_input.rs  chord_package.rs  chord_trigger.rs  chords_file.rs  key.rs  keyboard_state.rs  mod.rs  path.rs  raw_chord_package.rs  shortcut_simulation.rs  toml.rs
src-tauri/src/observables/: chord_files.rs  chord_package_manager.rs  chord_package_registry.rs  chorder.rs  chords.rs  desktop_app_manager.rs  frontmost.rs  git_package_registry.rs  git_repos.rs  mod.rs  permissions.rs  settings.rs
src-tauri/src/quickjs/: chord_module.rs  mod.rs
src-tauri/src/registry/: chord_package_registry.rs  git_chord_package_registry.rs  local_chord_package_registry.rs  mod.rs
src-tauri/src/state/: mod.rs  observable.rs
src-tauri/src/state/observables/: app_mode.rs  chord_input.rs  chord_input_ui.rs  chord_mode.rs  chord_panel.rs  git_repos.rs  keyboard.rs  mod.rs  permissions.rs  settings.rs
src-tauri/src/stores/: global_hotkey.rs  mod.rs  repos.rs
src-tauri/src/tauri_app/: app_lifecycle.rs  commands.rs  context.rs  git.rs  js.rs  js_chord.rs  js_chordsapp.rs  lock_file.rs  menu.rs  mod.rs  registry.rs  scripting.rs  settings.rs  setup.rs  startup.rs  store.rs  tray.rs
(+129 files in other folders)
