[package]
name = "chords"
version = "0.1.0"
description = "shortcuts reimagined"
edition = "2024"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chords_lib"
crate-type = [
	"staticlib",
	"cdylib",
	"rlib"
]

[[bin]]
name = "chord"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = [
	"macos-private-api",
	"tray-icon",
	"image-png"
] }
taurpc-macros = { path = "./crates/taurpc_macros" }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4.5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = [ "full" ] }
tauri-plugin-user-input = "0.1.1"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-log = "2"
log = "*"
rdev = { version = "*", features = [
	"unstable_grab",
	"x11"
] }
observable-property = "0.4.2"
toml = "1.0.6"
toml_edit = "0.25.4"
anyhow = "1.0"
regex = "1.12.2"
libc = "0.2"
bitflags = "2.11"
parking_lot = { version = "0.12", features = [ "deadlock_detection" ] }
clap = { version = "4.5.60", features = [ "derive" ] }
keycode = "1"
device_query = "4"
walkdir = "2.5.0"
gix = { version = "0.80.0", features = [ "blocking-http-transport-reqwest-rust-tls" ] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
rquickjs = { version = "0.11.0", features = [ "full-async" ] }
mac-keycode = "0.0.2"
fast_radix_trie = "1.1.0"
llrt_modules = { git = "https://github.com/awslabs/llrt", package = "llrt_modules" }
llrt_core = { git = "https://github.com/awslabs/llrt", package = "llrt_core", features = [
	'no-sdk',
	'uncompressed',
] }
# We need to manually enable all features
llrt_os = { git = "https://github.com/awslabs/llrt", package = "llrt_os", default-features = true }
llrt_readline = { path = "./crates/llrt_readline" }
rquickjs-serde = "0.5.0"
tauri-plugin-store = "2"
jsonc-parser = "0.32.1"
typeshare = "1"
specta = { version = "=2.0.0-rc.22", features = [ "derive" ] }
taurpc = "0.7.1"
delegate = "0.13.5"
thiserror = "2.0.18"
inventory = "0.3.22"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3.1", features = [ "block2" ] }
objc2-foundation = { version = "0.3.1", features = [ "block2" ] }
macos-accessibility-client = "0.0.2"
frontmost = "1.1.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
raw-window-handle = "0.6"
window-vibrancy = "0.6.0"
osakit = "0.3.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[patch.crates-io]
rdev = { path = "./crates/rdev" }
frontmost = { path = "./crates/frontmost" }

[patch."https://github.com/awslabs/llrt"]
llrt_core = { path = "./crates/llrt_core" }
llrt_net = { path = "./crates/llrt_net" }
