[package]
name = "llrt_core"
version = "0.8.1-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust"]
lambda = []
no-sdk = []
uncompressed = []
macro = ["rquickjs/macro"]
bindgen = ["rquickjs/bindgen"]

# TLS crypto backend features
tls-ring = ["rustls/ring", "llrt_modules/tls-ring"]
tls-aws-lc = ["rustls/aws_lc_rs", "llrt_modules/tls-aws-lc"]
tls-graviola = ["llrt_modules/tls-graviola"]
tls-openssl = ["llrt_modules/tls-openssl", "dep:openssl"]

# Crypto provider features
crypto-rust = ["llrt_modules/crypto-rust"]
crypto-ring = ["llrt_modules/crypto-ring"]
crypto-ring-rust = ["llrt_modules/crypto-ring-rust"]
crypto-graviola = ["llrt_modules/crypto-graviola"]
crypto-graviola-rust = ["llrt_modules/crypto-graviola-rust"]
crypto-openssl = ["llrt_modules/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["openssl/vendored"]

[dependencies]
bytes = { version = "1", default-features = false }
home = { version = "0.5", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
jiff = { version = "0.2" }
libc = { version = "0.2", default-features = false }
llrt_context = { git = "https://github.com/awslabs/llrt", package = "llrt_context" }
llrt_encoding = { git = "https://github.com/awslabs/llrt", package = "llrt_encoding" }
llrt_hooking = { git = "https://github.com/awslabs/llrt", package = "llrt_hooking" }
llrt_json = { git = "https://github.com/awslabs/llrt", package = "llrt_json" }
llrt_logging = { git = "https://github.com/awslabs/llrt", package = "llrt_logging" }
llrt_modules = { git = "https://github.com/awslabs/llrt", package = "llrt_modules", default-features = false, features = [
  "base",
  "console",
] }
llrt_numbers = { git = "https://github.com/awslabs/llrt", package = "llrt_numbers" }
llrt_utils = { git = "https://github.com/awslabs/llrt", package = "llrt_utils", features = ["all"] }
once_cell = { version = "1", features = ["std"], default-features = false }
phf = { version = "0.13", default-features = false }
quick-xml = { version = "0.39", default-features = false }
rand = { version = "0.10.0", features = [
  "alloc",
  "thread_rng",
], default-features = false }
rquickjs = { version = "0.11", features = [
  "futures",
  "parallel",
  "rust-alloc",
], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pemfile = { version = "2", features = ["std"], default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["sync", "time"], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
zstd = { version = "0.13", default-features = false }
openssl = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
md-5 = { version = "0.11.0-rc.5", default-features = false }
[target.'cfg(not(target_os = "windows"))'.dependencies]
md-5 = { version = "0.11.0-rc.5", default-features = false }

[build-dependencies]
rquickjs = { version = "0.11", default-features = false }
phf_codegen = { version = "0.13", default-features = false }
llrt_build = { git = "https://github.com/awslabs/llrt", package = "llrt_build" }
uuid = { version = "1", features = ["v4"], default-features = false }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
wiremock = { version = "0.6", default-features = false }
llrt_test = { git = "https://github.com/awslabs/llrt", package = "llrt_test" }
